# bpp_project_december

./: .gitignore  BPPResultIO.cpp  BPPResultIO.h  BinpackingCalculate.cpp  CMakeLists.txt  CalculateBppErhan.cpp  CalculateBppErhan.h  CameraParameterIO.cpp  CameraParameterIO.h  ClusterExtraction.cpp  ClusterExtraction.h  DataProcess.cpp  DataProcess.h  Doxyfile  KinectV2Connector.cpp  KinectV2Connector.h  Main.cpp  MainUI.cpp  MainUI.h  MainUI.ui  MainUI.ui.autosave  ObjectTransformationData.cpp  ObjectTransformationData.h  OutlierRemoval.cpp  OutlierRemoval.h  PassthroughFilter.cpp  PassthroughFilter.h  PlaneSegmentParameterIO.cpp  PlaneSegmentParameterIO.h  PlaneSegmentation.cpp  PlaneSegmentation.h  PointCloudBPPTextListIO.cpp  PointCloudBPPTextListIO.h  PointCloudIO.cpp  PointCloudIO.h  PointCloudOperation.cpp  PointCloudOperation.h  PointCloudProcess.cpp  PointCloudProcess.h  PointCloudTransformationExtraction.cpp  (+19 more)
bpp_cornerpoint/: BinpackingCalculate.h
camera_parameter/: _camera_topview_param.txt  _camera_topview_param_home_depth1.txt  _camera_topview_param_lab.txt  _camera_topview_param_lab2.txt  _camera_topview_param_lab3_depth.txt  _camera_topview_param_lab_depth1.txt  _camera_topview_param_lab_rectangle.txt
pcd_files/: arrow.stl  arrow_green.pcd  box12_removedplane.pcd  box12_removedplane_leaf001.pcd  bun0.pcd  input--box12_320x115x250.pcd  input-box12_320x115x250_oulierremoved.pcd  input20161207_original_position.pcd  input20161207noplane_outlierremoved.pcd  input20161226_redplane.pcd  qq2.pcd  testhome.pcd  z1.pcd  z2.pcd  z3.pcd  z_boxes.txt
(+264 files in other folders)
